<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
>

<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightPurple"
>

    <!-- 타이틀 -->
    <Button
            android:id="@+id/tvQuizTitle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/tile"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkPurple"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    />
    <EditText
            android:id="@+id/etUserQuizTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/tvQuizTitle"
            app:layout_constraintTop_toTopOf="@id/tvQuizTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvQuizTitle"
            android:layout_marginLeft="@dimen/margin10"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:background="@drawable/round_fill_white"
            android:textSize="@dimen/edit_text_size"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:hint="@string/et_hint"
            android:paddingLeft="@dimen/edit_padding_left"
    />
    <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_view_height"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/etUserQuizTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
    />

    <!-- 문제 -->
    <Button
            android:id="@+id/tvQuizContents"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/quiz"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkPurple"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintLeft_toLeftOf="@id/line1"
    />
    <EditText
            android:id="@+id/etUserQuizContents"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            app:layout_constraintTop_toBottomOf="@id/tvQuizContents"
            app:layout_constraintLeft_toLeftOf="@id/tvQuizContents"
            app:layout_constraintRight_toRightOf="@id/etUserQuizTitle"
            android:background="@drawable/round_fill_white"
            android:layout_marginTop="@dimen/margin5"
            android:hint="@string/et_hint"
            android:paddingLeft="@dimen/edit_padding_left"
            android:textSize="@dimen/edit_text_size"
    />
    <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_view_height"
            android:background="@color/grey"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserQuizContents"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
    />

    <!-- 보기 -->
    <Button
            android:id="@+id/tvChoice"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/choice"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@color/darkPurple"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintLeft_toLeftOf="@id/line2"
    />

    <!--1-->
    <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChoice"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"

    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/darkPurple"
                android:textStyle="bold"
                android:paddingLeft="@dimen/padding30"
                android:layout_marginRight="@dimen/margin30"
        />
        <EditText
                android:id="@+id/etUserQuiz_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/edit_text_size"
                android:background="@drawable/round_fill_white"
                android:hint="@string/et_hint"
                android:paddingLeft="@dimen/edit_padding_left"
        />

    </LinearLayout>

    <!-- 2 -->
    <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin30"
            app:layout_constraintLeft_toLeftOf="@id/linear1"
            app:layout_constraintRight_toRightOf="@id/linear1"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            android:layout_marginTop="@dimen/margin5"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textColor="@color/darkPurple"
                android:textStyle="bold"
                android:paddingLeft="@dimen/padding30"
                android:layout_marginRight="@dimen/margin30"
        />
        <EditText
                android:id="@+id/etUserQuiz_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/edit_text_size"
                android:background="@drawable/round_fill_white"
                android:paddingLeft="@dimen/edit_padding_left"
                android:hint="@string/et_hint"
        />
    </LinearLayout>

    <!-- 3 -->
    <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin30"
            app:layout_constraintLeft_toLeftOf="@id/linear2"
            app:layout_constraintRight_toRightOf="@id/linear2"
            app:layout_constraintTop_toBottomOf="@id/linear2"
            android:layout_marginTop="@dimen/margin5"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textColor="@color/darkPurple"
                android:textStyle="bold"
                android:paddingLeft="@dimen/padding30"
                android:layout_marginRight="@dimen/margin30"
        />
        <EditText
                android:id="@+id/etUserQuiz_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/edit_text_size"
                android:background="@drawable/round_fill_white"
                android:paddingLeft="@dimen/edit_padding_left"
                android:hint="@string/et_hint"
        />
    </LinearLayout>

    <!-- 4 -->
    <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin30"
            app:layout_constraintLeft_toLeftOf="@id/linear3"
            app:layout_constraintRight_toRightOf="@id/linear3"
            app:layout_constraintTop_toBottomOf="@id/linear3"
            android:layout_marginTop="@dimen/margin5"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textColor="@color/darkPurple"
                android:textStyle="bold"
                android:paddingLeft="@dimen/padding30"
                android:layout_marginRight="@dimen/margin30"
        />
        <EditText
                android:id="@+id/etUserQuiz_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/edit_text_size"
                android:background="@drawable/round_fill_white"
                android:hint="@string/et_hint"
                android:paddingLeft="@dimen/edit_padding_left"
        />
    </LinearLayout>

    <!-- 답 -->
    <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin30"
            app:layout_constraintLeft_toLeftOf="@id/linear4"
            app:layout_constraintRight_toRightOf="@id/linear4"
            app:layout_constraintTop_toBottomOf="@id/linear4"
            android:layout_marginTop="@dimen/margin5"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textColor="@color/darkPurple"
                android:textStyle="bold"
                android:paddingLeft="@dimen/padding30"
                android:layout_marginRight="25dp"
        />
        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        >

        </Spinner>
    </LinearLayout>


    <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="@dimen/line_view_height"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/linear5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    />

    <!-- 해설 -->
    <Button
            android:id="@+id/tvExplanation"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:text="@string/explanation"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkPurple"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintLeft_toLeftOf="@id/line3"
    />
    <EditText
            android:id="@+id/etUserQuizExplanation"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            app:layout_constraintLeft_toLeftOf="@id/etUserQuizContents"
            app:layout_constraintRight_toRightOf="@id/etUserQuizContents"
            app:layout_constraintTop_toBottomOf="@id/tvExplanation"
            android:background="@drawable/round_fill_white"
            android:layout_marginTop="@dimen/margin5"
            android:hint="@string/et_hint"
            android:paddingLeft="@dimen/edit_padding_left"
            android:textSize="@dimen/edit_text_size"
    />

    <!-- 저장 -->
    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/darkPurple"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin5"
            app:layout_constraintTop_toBottomOf="@id/etUserQuizExplanation"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>