<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/lightPurple"
>

    <!-- 상부 -->
    <TextView
            android:id="@+id/tvId"
            android:textColor="@color/white"
            android:textSize="@dimen/edit_text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:backgroundTint="@color/darkPurple"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"

    />

    <TextView
            android:id="@+id/tvNothing"
            android:layout_width="0dp"
            android:layout_height="@dimen/folder_item_height"
            android:background="@drawable/round_fill"
            android:text="@string/nothing"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="@dimen/margin10"
            app:layout_constraintTop_toBottomOf="@id/btnLogout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    />

    <!-- 중부 -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFolderRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnAdd"
            app:layout_constraintTop_toBottomOf="@id/btnLogout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    >

    </androidx.recyclerview.widget.RecyclerView>

    <!-- 하부-->
    <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkPurple"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/margin10"
    />



</androidx.constraintlayout.widget.ConstraintLayout>