<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightPurple"
        android:focusable="true"
        android:focusableInTouchMode="true"

>
    <Button
            android:id="@+id/tvOdabTitle"
            android:textSize="@dimen/button_text_size"
            android:text="@string/tile"
            android:backgroundTint="@color/darkPurple"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    />

    <EditText
            android:id="@+id/etUserOdabTitle"
            android:textSize="@dimen/edit_text_size"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/tvOdabTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvOdabTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvOdabTitle"
            android:layout_marginRight="@dimen/margin10"
            android:background="@drawable/round_fill_white"
            android:hint="@string/et_hint"
            android:paddingLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"

    />
    <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="@dimen/line_view_height"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tvOdabTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
    />

    <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
    />

    <Button
            android:id="@+id/btnPictureAdd"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/add"
            app:layout_constraintTop_toTopOf="@id/ivPicture"
            app:layout_constraintBottom_toBottomOf="@id/ivPicture"
            app:layout_constraintLeft_toLeftOf="@id/ivPicture"
            app:layout_constraintRight_toRightOf="@id/ivPicture"
    />

    <View 
            android:id="@+id/line2"
            android:layout_width="0dp" 
            android:layout_height="@dimen/line_view_height"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/ivPicture"
            app:layout_constraintLeft_toLeftOf="@id/line1"
            app:layout_constraintRight_toRightOf="@id/line1"
            android:layout_marginTop="@dimen/margin10"
    />
    
    <Button 
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkPurple"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintLeft_toLeftOf="@id/tvOdabTitle"
            android:layout_marginTop="@dimen/margin10"
    />

    <ScrollView
            android:id="@+id/svText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            app:layout_constraintTop_toBottomOf="@id/tvText"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/round_fill_white"
    >
        <EditText
                android:id="@+id/etUserOdabTextContents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/et_hint"
                android:textSize="@dimen/edit_text_size"
                android:paddingLeft="@dimen/margin10"
        />

    </ScrollView>

    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkPurple"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/save"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>